// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`move-document-to-recycle-bin should handle moving a non-existent document 1`] = `
{
  "content": [
    {
      "text": "{"type":"Error","title":"The content could not be found","status":404,"operationStatus":"NotFound"}",
      "type": "text",
    },
  ],
  "isError": true,
}
`;

exports[`move-document-to-recycle-bin should move a document to the recycle bin 1`] = `
{
  "content": [
    {
      "text": "",
      "type": "text",
    },
  ],
}
`;
